refactor merge method in Solution88 and optimize removal in Solution380